--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,9 +5,8 @@
                 <a href="/"><h1>Portfolio</h1></a>
             </div>
             <div class="flex space-x-10 w-full h-full items-center justify-center">
-                <a href=""><h3>A propos</h3></a>
-                <a href=""><h3>Projets</h3></a>
-                <a href=""><h3>Compétences</h3></a>
+                <a href="/"><h3>A propos</h3></a>
+                <a href="/projets"><h3>Projets</h3></a>
             </div>
         </div>
     </div>
