--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -6,9 +6,23 @@
   <button id="openModalBtn" class="px-4 py-2 bg-blue-500 text-white rounded">Contactez-moi</button>
 
   <div id="myModal" class="fixed inset-0 flex items-center justify-center bg-gray-800 bg-opacity-50 hidden">
-    <div class="bg-white rounded-lg overflow-hidden shadow-xl max-w-sm w-full">
-      <div class="p-4">
-        <input type="text" placeholder="">
+    <div class="bg-white p-14 rounded-lg overflow-hidden shadow-xl w-2/4">
+      <div class="p-4 flex items-center justify-center">
+        <label class="w-24">Email : </label>
+        <input class="w-1/2 border border-black border-solid rounded p-2" id="email" name="email" type="text" placeholder="Email">
+      </div>
+      <div class="p-4 flex items-center justify-center">
+        <label class="w-24">Sujet : </label>
+        <input class="w-1/2 border border-black border-solid rounded p-2" id="subject" name="subject" type="text" placeholder="Sujet" />
+      </div>
+      <div class="p-4 flex items-center justify-center">
+        <label class="w-40">Message : </label>
+        <textarea class="resize-none border border-black border-solid rounded p-2" id="message" name="message"
+                  cols="30" rows="6" placeholder="Message">
+        </textarea>
+      </div>
+      <div class="px-4 py-3 border-gray-200 flex justify-center items-center">
+        <button class="px-4 py-2 bg-blue-500 text-white rounded">Envoyer</button>
       </div>
       <div class="px-4 py-3 border-gray-200 flex justify-end">
         <button id="closeModalBtn" class="px-4 py-2 bg-red-500 text-white rounded">Fermer</button>
@@ -21,6 +35,8 @@
     const openModalBtn = document.getElementById('openModalBtn');
     const closeModalBtn = document.getElementById('closeModalBtn');
     const modal = document.getElementById('myModal');
+
+    const email = document.getElementById('email');
 
     openModalBtn?.addEventListener('click', () => {
       modal?.classList.remove('hidden');
@@ -35,4 +51,6 @@
         modal.classList.add('hidden');
       }
     });
+
+
 </script>
