--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,11 @@ const title = "Portfolio"
 					Je suis un développeur étudiant, passionné de
 					programmation et très curieux des nouvelles technologies
 				</span>
+				<p>
+					<br>
+					Je travaille actuellement en tant que développeur logiciel chez E2MK à Laon (02000) et étudiant à Promeo
+					Compiègne (60190)
+				</p>
 			</div>
 			<div class="flex items-center justify-center space-x-10">
 				<div class="">
