--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const title = "Portfolio"
 	<Header/>
 	<div class="p-20 flex items-center justify-center w-full h-full space-x-10">
 		<div class="w-full h-full text-2xl p-10">
-			<h1>Bonjour, je m'appelle Nicolas HERISSARD</h1> <br>
+			<h1>Bonjour, je m'appelle <strong>Nicolas HERISSARD</strong></h1> <br>
 			<div class="mb-10">
 				<span>
 					Je suis un développeur étudiant, passionné de
@@ -25,8 +25,12 @@ const title = "Portfolio"
 				</span>
 				<p>
 					<br>
-					Je travaille actuellement en tant que développeur logiciel chez E2MK à Laon (02000) et étudiant à Promeo
-					Compiègne (60190)
+					Je travaille actuellement en tant que développeur logiciel chez E2MK à Laon (02000)
+					où je travaille sur un logiciel fait en C#
+					<br>
+					<br>
+					Je suis également étudiant à Promeo Compiègne et je souhaite faire prochainement une licence pro RGI
+					à Promeo Beauvais
 				</p>
 			</div>
 			<div class="flex items-center justify-center space-x-10">
