--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <div class="w-full h-full">
-    <div class="flex items-center justify-center">
-        <div class="flex flex-row items-center text-2xl mt-10 w-full h-full px-20">
+    <div class="md:flex md:items-center md:justify-center">
+        <div class="flex flex-row items-center text-2xl mt-10 w-full h-full md:px-20 px-5">
             <div class="w-full h-full">
                 <a href="/"><h1>Portfolio</h1></a>
             </div>
