--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,22 @@
-<div class="w-full h-full">
+<div class="dark:bg-black w-full h-full">
     <div class="md:flex md:items-center md:justify-center">
         <div class="flex flex-row items-center text-2xl mt-10 w-full h-full md:px-20 px-5">
             <div class="w-full h-full">
-                <a href="/"><h1>Portfolio</h1></a>
+                <a href="/" class="dark:text-white"><h1>Portfolio</h1></a>
             </div>
-            <div class="flex space-x-10 w-full h-full items-center justify-center">
+            <div class="flex space-x-10 w-full h-full items-center justify-center dark:text-white">
                 <a href="/"><h3>A propos</h3></a>
                 <a href="/projets"><h3>Projets</h3></a>
+            </div>
+            <div class="flex items-center justify-center w-1/3 h-full">
+                <label class="inline-flex items-center cursor-pointer">
+                    <input id="toggle" type="checkbox" value="" class="sr-only peer">
+                    <div class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
+                    <span id="text-mode" class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">Light Mode</span>
+                </label>
             </div>
         </div>
     </div>
 </div>
+
+<script src="../scripts/toggle.js"></script>
