github projects and design

--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -1,6 +1,7 @@
 ---
 const diplomas = [
-  { year: "2024", title: "BTS SIO", institution: "Promeo Formation Compiègne" },
+  { year: "2024-2025", title: "Licence Pro RGI", institution: "Promeo Beauvais" },
+  { year: "2022-2024", title: "BTS SIO", institution: "Promeo Formation Compiègne" },
   { year: "2021", title: "BAC PRO MEI", institution: "Lycée Mireille Grenet Compiègne" },
 ];
 ---
