--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@
             </div>
             <div class="flex space-x-10 w-full h-full items-center justify-center dark:text-white">
                 <a href="/"><h3>A propos</h3></a>
-                <a href="/projets"><h3>Projets</h3></a>
+                <a href="/projets"><h3>Mes Projets</h3></a>
             </div>
             <div class="flex items-center justify-center w-1/3 h-full">
                 <label class="inline-flex items-center cursor-pointer">
