--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Header from '../../src/components/Header.astro'
 import Timeline from '../components/Timeline.astro'
 import Modal from '../components/Modal.astro'
+import { getAvailabilityStatus } from '../data/notion'
 
 const title = "Portfolio"
 ---
@@ -96,6 +97,13 @@ const title = "Portfolio"
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+	</div>
+	<div>
+		<div>
+			<div>
+				
 			</div>
 		</div>
 	</div>
