--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,10 @@
+---
+import { getAvailabilityStatus } from "../data/notion"
+
+const availabilityStatus = await getAvailabilityStatus()
+const color = availabilityStatus === "Non disponible" ? "red" : "green"
+---
+
 <div class="dark:bg-black w-full h-full">
     <div class="md:flex md:items-center md:justify-center">
         <div class="flex flex-row items-center text-2xl mt-10 w-full h-full md:px-20 px-5">
@@ -5,6 +12,7 @@
                 <a href="/" class="dark:text-white"><h1>Portfolio</h1></a>
             </div>
             <div class="flex space-x-10 w-full h-full items-center justify-center dark:text-white">
+                <code class=`top-4 right-4 bg-${color}-200 text-${color}-800 px-3 py-1 rounded-full text-sm shadow-lg italic p-1`>{availabilityStatus}</code>
                 <a href="/"><h3>A propos</h3></a>
                 <a href="/projets"><h3>Mes Projets</h3></a>
             </div>
