--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ const color = availabilityStatus === "Non disponible" ? "red" : "green"
                 <a href="/" class="dark:text-white"><h1>Portfolio</h1></a>
             </div>
             <div class="flex space-x-10 w-full h-full items-center justify-center dark:text-white">
-                <code class=`top-4 right-4 bg-${color}-200 text-${color}-800 px-3 py-1 rounded-full text-sm shadow-lg italic p-1`>{availabilityStatus}</code>
+                <!-- <code class=`top-4 right-4 bg-${color}-200 text-${color}-800 px-3 py-1 rounded-full text-sm shadow-lg italic p-1`>{availabilityStatus}</code> -->
                 <a href="/"><h3>A propos</h3></a>
                 <a href="/projets"><h3>Mes Projets</h3></a>
             </div>
