--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,8 @@
 import { getAvailabilityStatus } from "../data/notion"
 
 const availabilityStatus = await getAvailabilityStatus()
-const color = availabilityStatus === "Non disponible" ? "red" : "green"
+const color = availabilityStatus === "Non disponible" ? "red" : "green" as string
+console.log(color)
 ---
 
 <div class="dark:bg-black w-full h-full">
@@ -12,7 +13,7 @@ const color = availabilityStatus === "Non disponible" ? "red" : "green"
                 <a href="/" class="dark:text-white"><h1>Portfolio</h1></a>
             </div>
             <div class="flex space-x-10 w-full h-full items-center justify-center dark:text-white">
-                <!-- <code class=`top-4 right-4 bg-${color}-200 text-${color}-800 px-3 py-1 rounded-full text-sm shadow-lg italic p-1`>{availabilityStatus}</code> -->
+                <code class=`top-4 right-4 bg-green-200 text-green-800 px-3 py-1 rounded-full text-sm shadow-lg italic p-1`>{availabilityStatus}</code>
                 <a href="/"><h3>A propos</h3></a>
                 <a href="/projets"><h3>Mes Projets</h3></a>
             </div>
