--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Header from '../../src/components/Header.astro'
 import Timeline from '../components/Timeline.astro'
-import Modal from '../components/Modal.astro'
-import { getAvailabilityStatus } from '../data/notion'
+import { sendEmail } from '../data/email'
 
 const title = "Portfolio"
+
+//sendEmail("nicolas.herissard@gmail.com", "Test", "Bonjour")
 ---
 
 <!DOCTYPE html>
