--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -12,6 +12,7 @@ const repos = await fetchGitHubRepos(GITHUB_USERNAME);
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/terminal.ico" type="image/x-icon">
     <title>Portfolio</title>
 </head>
 <body class="min-h-screen bg-gradient-to-br from-[#e0f7fa] via-[#f8fbff] to-[#e0f7fa] text-slate-800 animate-gradient-x">
