--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Page</title>
+    <link rel="icon" href="/loupe.ico" type="image/x-icon">
+    <title>Page non trouvée - 404</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body>
-    <h1>Erreur 404 Not Found</h1>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+    <div class="text-center">
+        <div class="text-gray-800 mb-4">
+            <i class="fas fa-search text-9xl"></i>
+        </div>
+        <h1 class="text-6xl font-bold text-gray-800 mb-4">404</h1>
+        <p class="text-2xl text-gray-600 mb-8">Oups ! La page que vous recherchez n'existe pas.</p>
+        <a href="/" class="bg-blue-500 text-white px-6 py-3 rounded-full text-lg hover:bg-blue-600 transition duration-300">Retour à l'accueil</a>
+    </div>
 </body>
 </html>
