--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,10 +13,10 @@ const title = "Portfolio"
 	<link rel="icon" href="/terminal.ico" type="image/x-icon">
 	<title>{title}</title>
 </head>
-<body class="bg-gradient-to-br from-white via-gray-200 to-blue-100 dark:from-black dark:via-gray-900 dark:to-gray-800">
+<body class="bg-gradient-to-br from-white via-gray-200 to-blue-100 dark:from-black dark:via-gray-800 dark:to-gray-900">
 	<Header/>
 	<div class="flex flex-col md:flex-row w-full h-full md:p-16 gap-10 items-center justify-center">
-		<div class="w-full md:w-1/2 px-6 py-8 space-y-6">
+		<div class="w-full md:w-1/2 px-6 py-8 space-y-6 dark:text-white">
 		  <h1 class="text-4xl font-bold">Bonjour, je m'appelle <strong class="text-blue-400">Nicolas HERISSARD</strong></h1>
 		  <div class="space-y-4 text-lg leading-relaxed">
 			<p>Je suis un développeur étudiant, passionné de programmation et curieux des nouvelles technologies.</p>
@@ -25,7 +25,7 @@ const title = "Portfolio"
 		  </div>
 		  <div class="flex space-x-6 pt-4">
 			<a href="https://github.com/NicolasHerissard" target="_blank" class="transition-transform hover:scale-110">
-			  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-10 h-10" />
+			  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-10 h-10 bg-white rounded-full" />
 			</a>
 			<a href="https://www.linkedin.com/in/nicolas-herissard-374930166/" target="_blank" class="transition-transform hover:scale-110">
 			  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-10 h-10" />
