--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ const availabilityStatus = await getAvailabilityStatus()
 const color = availabilityStatus === "Non disponible" ? "red" : "green" as string
 ---
 
-<div class="dark:bg-black w-full h-full">
+<div class="w-full h-full">
     <div class="md:flex md:items-center md:justify-center">
         <div class="flex flex-row items-center text-2xl mt-10 w-full h-full md:px-20 px-5">
             <div class="w-full h-full">
