--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -8,7 +8,7 @@ const diplomas = [
 
 <section class="timeline">
     {diplomas.map(diploma => (
-      <div class="flex items-center my-4">
+      <div class="flex items-center my-4 md:px-3 px-3">
         <div class="flex-none w-24 text-xl font-bold text-blue-600">{diploma.year}</div>
         <div class="flex-grow bg-gray-100 p-4 rounded-lg shadow">
           <h3 class="text-lg font-semibold">{diploma.title}</h3>
