change config tailwindcss

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../../src/components/Header.astro'
 import Timeline from '../components/Timeline.astro'
+import '../styles/global.css'
 
 const title = "Portfolio"
 ---
